Fix for Action data to be extracted